2004-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* cscmi.c: Fix compiler warnings.

2004-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* valentine.scm (button-clicked): Patch from
	tom@gentoo.kicks-ass.org to fix the case where there are no cards
	in the stock, but one on the waster. You can now redeal in that
	situation.

2004-05-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* escalator.scm: Fix-ups for the new drawing code and Zohar
	Kelrich's patch to fix and clean-up the overlap detection code.

2004-05-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* card.h: 
	* dialog.c: 
	* sol.h: 
	* card.c: Reimplement the theme selector using games_card_selector.

2004-04-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* translatable_game_names.h: 
	* Makefile.am:
	* spider_one_suit.scm:	
	* spider_two_suit.scm: Add one and two-suit versions of spider
	thanks to Aaron Schlaegel. See bug #69252.

2004-04-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c: 
	* sol.c: 
	* card.c: 
	* card.h: 
	* sol.h: 
	* Makefile.am: Remove any reference to the gdk_card_image library
	and add a gconf key to select the card images.

	* aisleriot.schemas.in: Add a key for the card theme. Remove the
	old card_options key.

2004-04-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* plait.scm: Return false appropriately from the double-click
	routine so undo/redo works correctly. Change the
	"game-continuable" function to check the hint function. Make the
	hint function also understand moving cards from the stock to the
	tableau.

2004-04-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* plait.scm: Added double-click support from Dean Copsey. Bug
	#140682.

	* agnes.scm (strip): Fix the hint function. Thanks to Leonardo
	Boshell, as reported in bug #140781.

2004-04-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* card.c (set_card_size): Adjustments to follow the revised
	games-card-images API.
