@@ -1,3 +1,10 @@
+Sat Jun  5 01:22:47 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* odessa.scm (game-over): Fix a bug in odessa that has been
+	bugging me for seven years.  Now the hint support will check for
+	moves in the tableau before trying to move an ace to the
+	foundation.
+
 2004-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* cscmi.c: Fix compiler warnings.
